# vla_study

./: .gitignore  .gitmodules
model_runtimes/octo_runtime/: README.md  configure.sh  pyproject.toml  start.sh
model_runtimes/octo_runtime/src/octo_runtime/: config.py  errors.py  models.py  runtime.py  server.py
model_runtimes/openvla_runtime/: README.md  configure.sh  pyproject.toml  start.sh
model_runtimes/openvla_runtime/src/openvla_runtime/: __init__.py  config.py  errors.py  models.py  prompting.py  runtime.py  server.py
python_controller/: README.md  demo.ipynb  main.py  pyproject.toml
python_controller/scripts/: make_video.sh
python_controller/src/vla_control/: __init__.py  action_adapter.py  config.py  errors.py  evaluation_runner.py  image_utils.py  logging_utils.py  models.py  octo_workflow.py  openvla_workflow.py  smoke.py  unity_client.py
python_controller/src/vla_control/backends/: __init__.py  base.py  dummy_policy.py  octo_rest_backend.py  openvla_rest_backend.py
unity/: .gitignore
unity/Assets/Editor/: HarnessSceneAuthoring.cs
unity/Assets/Materials/: ProxyAccent.mat  ProxyEndEffector.mat  ProxyJaw.mat  ProxyPalm.mat  TargetAccent.mat  TargetObject.mat  WorkspaceBackdrop.mat  WorkspaceFloor.mat  WorkspaceFrame.mat  WorkspaceTable.mat
unity/Assets/Scenes/: Main.unity
unity/Assets/Scripts/Api/: HttpApiServer.cs  MainThreadDispatcher.cs
unity/Assets/Scripts/Bootstrap/: HarnessOperatorConsole.cs  HarnessSceneBootstrap.cs  HarnessSceneReferences.cs
unity/Assets/Scripts/Camera/: CameraCaptureService.cs  CameraMountService.cs  CameraRegistry.cs  NamedCameraDefinition.cs  RegisteredCameraDescriptor.cs  RuntimeCameraService.cs
unity/Assets/Scripts/Data/: ApiDtos.cs  PoseCommand.cs
unity/Assets/Scripts/Robot/: ArticulatedRobotAdapter.cs  IRobotAdapter.cs  ProxyGripperVisualController.cs  ProxyPoseAdapter.cs
unity/Assets/Scripts/Simulation/: ControlTimingConfig.cs  SceneStateService.cs  SimulationController.cs  TaskResetService.cs
unity/Assets/URDF/Materials/: interbotix_black.mat
unity/Assets/URDF/wx250s/: README.md  wx250s.urdf
unity/Assets/URDF/wx250s/meshes/wx250s_meshes/: wx250s_10_gripper_finger.prefab  wx250s_10_gripper_finger_0.asset  wx250s_10_gripper_finger_1.asset  wx250s_10_gripper_finger_10.asset  wx250s_10_gripper_finger_2.asset  wx250s_10_gripper_finger_3.asset  wx250s_10_gripper_finger_4.asset  wx250s_10_gripper_finger_5.asset  wx250s_10_gripper_finger_6.asset  wx250s_10_gripper_finger_7.asset  wx250s_10_gripper_finger_8.asset  wx250s_10_gripper_finger_9.asset  wx250s_1_base.prefab  wx250s_1_base_0.asset  wx250s_1_base_1.asset  wx250s_1_base_2.asset  wx250s_1_base_3.asset  wx250s_2_shoulder.prefab  wx250s_2_shoulder_0.asset  wx250s_2_shoulder_1.asset  wx250s_2_shoulder_2.asset  wx250s_2_shoulder_3.asset  wx250s_3_upper_arm.prefab  wx250s_3_upper_arm_0.asset  wx250s_3_upper_arm_1.asset  wx250s_3_upper_arm_2.asset  wx250s_3_upper_arm_3.asset  wx250s_3_upper_arm_4.asset  wx250s_3_upper_arm_5.asset  wx250s_3_upper_arm_6.asset  wx250s_3_upper_arm_7.asset  wx250s_3_upper_arm_8.asset  wx250s_4_upper_forearm.prefab  wx250s_4_upper_forearm_0.asset  wx250s_4_upper_forearm_1.asset  wx250s_4_upper_forearm_2.asset  wx250s_4_upper_forearm_3.asset  wx250s_5_lower_forearm.prefab  wx250s_5_lower_forearm_0.asset  wx250s_5_lower_forearm_1.asset  (+20 more)
unity/ProjectSettings/: DynamicsManager.asset  ProjectSettings.asset
