[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["octo_runtime*"]

[project]
name = "octo-runtime"
version = "0.1.0"
description = "Pinned Octo inference runtime for the VLA study project."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "distrax==0.1.5",
    "einops>=0.6.1",
    "fastapi>=0.110,<1.0",
    "flax==0.7.5",
    "jax==0.4.20",
    "jaxlib==0.4.20+cuda11.cudnn86",
    "ml_dtypes==0.2.0",
    "nvidia-cublas-cu11>=11.11",
    "nvidia-cuda-cupti-cu11>=11.8",
    "nvidia-cuda-nvcc-cu11>=11.8",
    "nvidia-cuda-runtime-cu11>=11.8",
    "nvidia-cudnn-cu11>=8.8",
    "nvidia-cufft-cu11>=10.9",
    "nvidia-cusolver-cu11>=11.4",
    "nvidia-cusparse-cu11>=11.7",
    "nvidia-nccl-cu11>=2.18.3",
    "numpy==1.24.3",
    "pillow>=10.0,<11.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "tensorflow-cpu==2.15.0",
    "tensorflow_probability==0.23.0",
    "transformers==4.34.1",
    "uvicorn[standard]>=0.29,<1.0",
    "dlimp",
    "scipy>=1.6.0,<=1.12.0",
]

[project.scripts]
octo-runtime-server = "octo_runtime.server:main"

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
jaxlib = { url = "https://storage.googleapis.com/jax-releases/cuda11/jaxlib-0.4.20+cuda11.cudnn86-cp310-cp310-manylinux2014_x86_64.whl" }
dlimp = { git = "https://github.com/kvablack/dlimp" }
