[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openvla_runtime*"]

[project]
name = "openvla-runtime"
version = "0.1.0"
description = "Pinned OpenVLA inference runtime for the VLA study project."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate==0.25.0",
    "einops>=0.7,<0.8",
    "fastapi>=0.110,<1.0",
    "numpy==1.26.4",
    "peft==0.11.1",
    "pillow>=10.0,<11.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "safetensors>=0.4.3,<1.0.0",
    "sentencepiece==0.1.99",
    "timm==0.9.10",
    "tokenizers==0.19.1",
    "transformers==4.40.1",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.optional-dependencies]
cpu = [
    "torch==2.2.0",
    "torchvision==0.17.0",
]
cu118 = [
    "torch==2.2.0",
    "torchvision==0.17.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.5/flash_attn-2.5.5%2Bcu118torch2.2cxx11abiFALSE-cp310-cp310-linux_x86_64.whl",
]

[project.scripts]
openvla-runtime-server = "openvla_runtime.server:main"

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu118" }]]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
]
torchvision = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu118", extra = "cu118" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
