[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
include = ["openvla_runtime*"]

[project]
name = "openvla-runtime"
version = "0.1.0"
description = "Pinned OpenVLA inference runtime for the VLA study project."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "accelerate==0.25.0",
    "einops>=0.7,<0.8",
    "fastapi>=0.110,<1.0",
    "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.5.5/flash_attn-2.5.5%2Bcu118torch2.2cxx11abiFALSE-cp310-cp310-linux_x86_64.whl",
    "numpy==1.26.4",
    "ninja>=1.11,<2.0",
    "nvidia-cublas-cu11==11.11.3.6",
    "nvidia-cuda-cupti-cu11==11.8.87",
    "nvidia-cuda-nvrtc-cu11==11.8.89",
    "nvidia-cuda-runtime-cu11==11.8.89",
    "nvidia-cudnn-cu11==8.7.0.84",
    "nvidia-cufft-cu11==10.9.0.58",
    "nvidia-curand-cu11==10.3.0.86",
    "nvidia-cusolver-cu11==11.4.1.48",
    "nvidia-cusparse-cu11==11.7.5.86",
    "nvidia-nccl-cu11==2.19.3",
    "nvidia-nvtx-cu11==11.8.86",
    "peft==0.11.1",
    "pillow>=10.0,<11.0",
    "pydantic>=2.7,<3.0",
    "pydantic-settings>=2.2,<3.0",
    "safetensors>=0.4.3,<1.0.0",
    "sentencepiece==0.1.99",
    "timm==0.9.10",
    "torch==2.2.0",
    "tokenizers==0.19.1",
    "transformers==4.40.1",
    "triton==2.2.0",
    "torchvision==0.17.0",
    "uvicorn[standard]>=0.29,<1.0",
]

[project.scripts]
openvla-runtime-server = "openvla_runtime.server:main"

[tool.uv]
required-environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
]

[tool.uv.sources]
torch = [{ index = "pytorch-cu118" }]
torchvision = [{ index = "pytorch-cu118" }]

[[tool.uv.index]]
name = "pytorch-cu118"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
